--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
+    "aws-amplify": "^4.3.14",
     "modern-normalize": "^1.1.0",
     "node-sass": "^7.0.1",
     "normalize.css": "^8.0.1",
