--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "aws-amplify": "^4.3.14",
+    "axios": "^0.26.0",
     "modern-normalize": "^1.1.0",
     "node-sass": "^7.0.1",
     "normalize.css": "^8.0.1",
