--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "aws-amplify": "^4.3.14",
     "axios": "^0.26.0",
     "modern-normalize": "^1.1.0",
+    "mysql": "^2.18.1",
     "node-sass": "^7.0.1",
     "normalize.css": "^8.0.1",
     "react": "^17.0.2",
